OF-1359 & OF-1360: web client plugin changes. (#837)
* OF-1359: Admin console changes should be reflected in changelog and version number.

* OF-1360: Update inVerse plugin to match upstream Converse 3.1.0 release.

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,12 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>3.1.0 Release 1</b> -- July 10th, 2017</p>
+<ul>
+    <li><a href="https://issues.igniterealtime.org/browse/OF-1359">OF-1359: Elevate webclients to top level menu in openfire admin UI</a></li>
+    <li><a href="https://issues.igniterealtime.org/browse/OF-1360">OF-1360: Update inVerse plugin to match upstream Converse 3.1.0 release.</a></li>
+</ul>
+
 <p><b>3.0.3 Alpha 1</b> -- June 19th, 2017</p>
 <ul>
     <li>Initial release.</li>
