Updates for the inVerse plugin (#859)
* OF-1370: inVerse plugin: hide registration tab.

When a user cannot register (if the domain is locked, and IBR is disabled), registration options should not be shown.

* OF-1371: Upgrade inVerse to 3.2.1

This commit replaces the converse.js 3.1.0 release with version 3.2.1. Additionally, the plugin now contains a copy of jquery (where previously, a link to a CDN was used).

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,12 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>3.2.1 Release 1</b> -- September 4th, 2017</p>
+<ul>
+    <li><a href="https://issues.igniterealtime.org/browse/OF-1370">OF-1370: hide registration tab when appropriate.</a></li>
+    <li><a href="https://issues.igniterealtime.org/browse/OF-1371">OF-1371: upgrade to converse.js 3.2.1.</a></li>
+</ul>
+
 <p><b>3.1.0 Release 1</b> -- July 10th, 2017</p>
 <ul>
     <li><a href="https://issues.igniterealtime.org/browse/OF-1359">OF-1359: Elevate webclients to top level menu in openfire admin UI</a></li>
