--- a/classes/index.html
+++ b/classes/index.html
@@ -6,9 +6,7 @@
     <title>inVerse</title>
     <link rel="shortcut icon" type="image/ico" href="inverse/css/images/favicon.ico"/>
     <link type="text/css" rel="stylesheet" media="screen" href="inverse/css/inverse.min.css" />
-    <![if gte IE 9]>
     <script src="inverse/dist/inverse.min.js"></script>
-    <![endif]>
 </head>
 <body>
 <div class="content">
@@ -16,7 +14,7 @@
         <h1 class="brand-heading"><i class="icon-conversejs"></i> inVerse</h1>
     </div>
 </div>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="jquery/dist/jquery.min.js"></script>
 <script>
     $( document ).ready( function()
     {
