OF-1413 clarify readme

--- a/readme.html
+++ b/readme.html
@@ -77,11 +77,12 @@
 
 <p>
     The plugin is configured via the Openfire Admin Console. After installation, a new Admin Console page is available.
-    The page can be found under the "Server" tab and "Web Clients" sub-tab. The name of the page is "inVerse".
+    The page can be found on a main menu in the "Web Clients" tab. The name of the page is "inVerse".
 </p>
 
 <p>
-    inVerse depends on HTTP binding, and will not work if the HTTP binding service of Openfire is disabled.
+    inVerse depends on HTTP binding, and will not work if the HTTP binding service of Openfire is disabled. It can be enabled on
+    the Server > Server Settings > HTTP Binding page.
 </p>
 
 <h2>Using the Plugin</h2>
