OF-1473: Update inVerse to version 3.3.2 (#1006)

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,11 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>3.3.2 Release 1</b> -- February 5th, 2018</p>
+<ul>
+    <li><a href="https://issues.igniterealtime.org/browse/OF-1473">OF-1473: upgrade to converse.js 3.3.2.</a></li>
+</ul>
+
 <p><b>3.2.1 Release 1</b> -- September 4th, 2017</p>
 <ul>
     <li><a href="https://issues.igniterealtime.org/browse/OF-1370">OF-1370: hide registration tab when appropriate.</a></li>
