OF-1512: Update inVerse plugin to version 3.3.4 (#1048)
This updates the inVerse plugin to use the latest upstream release. As suggested by JC, it's author,
I've also disabled the 'viewMode' configuration option for now (this should be reenabled in future
releases).

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,11 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>3.3.4 Release 1</b> -- March 15th, 2018</p>
+<ul>
+    <li><a href="https://issues.igniterealtime.org/browse/OF-1511">OF-1511: upgrade to converse.js 3.3.4.</a></li>
+</ul>
+
 <p><b>3.3.2 Release 1</b> -- February 5th, 2018</p>
 <ul>
     <li><a href="https://issues.igniterealtime.org/browse/OF-1473">OF-1473: upgrade to converse.js 3.3.2.</a></li>
