OF-1597: Update inVerse plugin to version 4.0.0
This replaces the converse.js library that's the base of the inVerse plugin to version 4.0.0.

--- a/changelog.html
+++ b/changelog.html
@@ -43,9 +43,14 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>4.0.0 Release 1</b> -- September 8th, 2018</p>
+<ul>
+    <li><a href="https://issues.igniterealtime.org/browse/OF-1597">OF-1597: upgrade to converse.js 4.0.0.</a></li>
+</ul>
+
 <p><b>3.3.4 Release 1</b> -- March 15th, 2018</p>
 <ul>
-    <li><a href="https://issues.igniterealtime.org/browse/OF-1511">OF-1511: upgrade to converse.js 3.3.4.</a></li>
+    <li><a href="https://issues.igniterealtime.org/browse/OF-1512">OF-1512: upgrade to converse.js 3.3.4.</a></li>
 </ul>
 
 <p><b>3.3.2 Release 1</b> -- February 5th, 2018</p>
