--- a/classes/index.html
+++ b/classes/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>inVerse</title>
     <link rel="shortcut icon" type="image/ico" href="inverse/css/images/favicon.ico"/>
-    <link type="text/css" rel="stylesheet" media="screen" href="inverse/css/inverse.min.css" />
+    <link type="text/css" rel="stylesheet" media="screen" href="inverse/css/converse.min.css" />
     <script src="inverse/dist/converse.min.js"></script>
 </head>
 <body>
