OF-1612: Update inVerse plugin to version 4.0.1

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,11 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>4.0.1 Release 1</b> -- September 20th, 2018</p>
+<ul>
+    <li><a href="https://issues.igniterealtime.org/browse/OF-1612">OF-1612: upgrade to converse.js 4.0.1.</a></li>
+</ul>
+
 <p><b>4.0.0 Release 1</b> -- September 8th, 2018</p>
 <ul>
     <li><a href="https://issues.igniterealtime.org/browse/OF-1597">OF-1597: upgrade to converse.js 4.0.0.</a></li>
