OF-1620: inVerse plugin: translations are not working.

--- a/changelog.html
+++ b/changelog.html
@@ -45,6 +45,7 @@
 
 <p><b>4.0.2 Release 1</b> -- October 4th, 2018</p>
 <ul>
+    <li><a href="https://issues.igniterealtime.org/browse/OF-1620">OF-1620: inVerse plugin: translations are not working.</a>
     <li><a href="https://issues.igniterealtime.org/browse/OF-1619">OF-1619: upgrade to converse.js 4.0.2</a>, which includes these changes:
     <ul>
         <li>M4A and WEBM files, when sent as XEP-0066 Out of Band Data, are now playable directly in chat</li>
