--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,11 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>4.0.2 Release 2</b> -- (tbd)</p>
+<ul>
+    <li>[<a href='https://issues.igniterealtime.org/browse/OF-1517'>OF-1517</a>] - Don't require i18n source files for all plugins to be encoded.</li>
+</ul>
+
 <p><b>4.0.2 Release 1</b> -- October 4th, 2018</p>
 <ul>
     <li><a href="https://issues.igniterealtime.org/browse/OF-1620">OF-1620: inVerse plugin: translations are not working.</a>
