--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,33 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>4.1.1 Release 1</b> -- (to be determined)</p>
+<ul>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/9">#9: Upgrade to converse.js 4.1.1</a>, which includes these changes:
+        <ul>
+            <li>Updated translations: af, cz, de, es, eu, ga, he, hi, ja, nb, nl_BE, zh_CN</li>
+            <li>New language supported: Esperanto</li>
+            <li>Accessibility: Tag the chat-content as an ARIA live region, for screen readers</li>
+            <li>Set releases URL to new Github repo</li>
+            <li>Rudimentary support for XEP-0333 chat markers</li>
+            <li>Better support for XEP-0359 stanza-id and origin-id elements.</li>
+            <li>Bugfix: restore textarea size after sending a message</li>
+            <li>Bugfix: MUC invite form not appearing</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1369</a> Don't wrongly interpret message with subject as a topic change.</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1405">#1405</a> Status of contacts list are not displayed properly</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1408">#1408</a> New config option roomconfig_whitelist</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1410">#1410</a> HTTP upload not working if conversations push proxy is used</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1412">#1412</a> MUC moderator commands can be disabled selectively by config</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1413">#1413</a> Fix moderator commands that change affiliation</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1414">#1414</a> Prevent duplicate messages on MUC join</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1417">#1417</a> Margin between nickname and badge</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1421">#1421</a> Fix direct invite for membersonly room</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1422">#1422</a> Resurrect the muc_show_join_leave option</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1438">#1438</a> Update contact nickname when receiving a roster push</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1442">#1442</a> MUC read receipts causing empty lines</li>
+        </ul>
+    </li>
+</ul>
 <p><b>4.1.0 Release 1</b> -- January 16, 2019</p>
 <ul>
     <li>[<a href='https://issues.igniterealtime.org/browse/OF-1517'>OF-1517</a>] - Don't require i18n source files for all plugins to be encoded.</li>
