#8: Fix Maven build

--- a/changelog.html
+++ b/changelog.html
@@ -45,6 +45,7 @@
 
 <p><b>4.1.1 Release 1</b> -- (to be determined)</p>
 <ul>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/8">#8: Fix Maven build</a>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/9">#9: Upgrade to converse.js 4.1.1</a>, which includes these changes:
         <ul>
             <li>Updated translations: af, cz, de, es, eu, ga, he, hi, ja, nb, nl_BE, zh_CN</li>
@@ -79,7 +80,7 @@
     <li><a href="https://issues.igniterealtime.org/browse/OF-1629">OF-1636: Add 'fullpage' style sheet.</a>
     <li><a href="https://issues.igniterealtime.org/browse/OF-1629">OF-1629: include missing resources (logos, sounds).</a>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/6">#6: upgrade to converse.js 4.1.0</a>, which includes these changes:
-        <h4>For Converse 4.1.0)</h4>
+        <h4>For Converse 4.1.0:</h4>
         <ul>
             <li>Bugfix: MUC commands were being ignored</li>
             <li>Bugfix: Multiple rooms shown active in the rooms list</li>
