#12: Update Converse to 4.1.2

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,17 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>4.1.2 Release 1</b> -- (to be determined)</p>
+<ul>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/12">#12: Upgrade to converse.js 4.1.2</a>, which includes these changes:
+        <ul>
+            <li>Updated translations: af, cz, de, es, he, it, nl, nl_BE, pt_BR, zh_CN</li>
+            <li>Bugfix. Prevent duplicate messages by comparing MAM archive id to XEP-0359 stanza ids.</li>
+            <li>Bugfix. Open groupchats not shown when logging in after disconnection.</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1406">#1406</a> TypeError: e.devicelists is undefined when unchecking the "trusted device" checkbox</li>
+        </ul>
+    </li>
+</ul>
 <p><b>4.1.1 Release 1</b> -- February 20, 2019</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/8">#8: Fix Maven build</a>
