--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>4.1.2 Release 1</b> -- (to be determined)</p>
+<p><b>4.1.2 Release 1</b> -- February 22, 2019</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/12">#12: Upgrade to converse.js 4.1.2</a>, which includes these changes:
         <ul>
