--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,48 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>4.2.0 Release 1</b> -- June 25, 2019</p>
+<ul>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/15">#15: upgrade to converse.js 4.2.0</a>, which includes these changes:
+        <ul>
+            <li>Upgrade to Backbone 1.4.0, Strophe 1.3.2 and Jasmine 2.99.2</li>
+            <li>Remove dependency on (our fork of) Awesomplete</li>
+            <li>Prevent user from adding themselves as contact</li>
+            <li>Fix "flashing" of roster filter when you have less than 5 roster contacts</li>
+            <li>Fix handling of CAPTCHAs offered by ejabberd</li>
+            <li>Don't send out receipts or markers for MAM messages</li>
+            <li>Allow setting of debug mode via URL with /#converse?debug=true</li>
+            <li>Render inline images served over HTTP if Converse itself was loaded on an unsecured (HTTP) page.</li>
+            <li>Make sure nickname passed in via _converse.initialize has first preference as MUC nickname</li>
+            <li>Make sure required registration fields have "required" attribute</li>
+            <li>New config setting <a href="https://conversejs.org/docs/html/configuration.html#autocomplete-add-contact">autocomplete_add_contact</a></li>
+            <li>New config setting <a href="https://conversejs.org/docs/html/configuration.html#locked-muc-domain">locked_muc_domain</a></li>
+            <li>New config setting <a href="https://conversejs.org/docs/html/configuration.html#locked-muc-nickname">locked_muc_nickname</a></li>
+            <li>New config setting <a href="https://conversejs.org/docs/html/configuration.html#show-client-info">show_client_info</a></li>
+            <li>Document new API method sendMessage</li>
+            <li>Don't filter out own device when sending an OMEMO message</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1149</a> With xhr_user_search_url, contact requests are not being sent out</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1213</a> Switch roster filter input and icons</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1327</a> fix False mentions positives in URLs and Email addresses</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1352</a> Add <a href="https://github.com/messageformat/Jed">Jed</a> as dependency of @converse/headless</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1373</a> Re-add support for the <a href="https://conversejs.org/docs/html/configuration.html#muc-domain">muc_domain setting</a></li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1400</a> When a chat message is just an emoji, enlarge the emoji</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1407</a> Silent errors when trying to use whitespace as MUC nickname</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1437</a> List of groupchats in modal doesn't scroll</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1457</a> Wrong tooltip shown for "unbookmark" icon</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1467</a> Fix rendering of URLs enclosed with sharp brackets such as &lt;https://example.org&gt;</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1479</a> Allow file upload by drag & drop also in MUCs</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1487</a> New config option <a href="https://conversejs.org/docs/html/configuration.html#muc-respect-autojoin">muc_respect_autojoin</a></li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1488</a> In error message, fall back to JID if name is not available.</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1501</a> Don't prompt for a reason if <a href="https://conversejs.org/docs/html/configuration.html#auto-join-on-invite">auto_join_on_invite</a> is true</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1507</a> Make message id and origin-id identical in order to fix LMC with Conversations</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1508</a> Minimized bookmarked chatboxes should not be always maximized after page reload.</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1369">#1512</a> Allow manual entry of jid even with <a href="https://conversejs.org/docs/html/configuration.html#xhr-user-search-url">xhr_user_search_url</a>.</li>
+            <li>The JID input field is now also visible. To hide it simply hide .add-xmpp-contact__jid via CSS.</li>
+        </ul>
+    </li>
+</ul>
+
 <p><b>4.1.2 Release 1</b> -- February 22, 2019</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/12">#12: Upgrade to converse.js 4.1.2</a>, which includes these changes:
