--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>5.0.1 Release 1</b> -- (tbd)</p>
+<p><b>5.0.1 Release 1</b> -- August 27, 2019</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/17">#17: upgrade to converse.js 5.0.1</a>, which includes these changes:
         <h4>For Converse 5.0.1:</h4>
