#21: fixed minor issue in changelog file

--- a/changelog.html
+++ b/changelog.html
@@ -48,10 +48,10 @@
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/21">#21: upgrade to converse.js 5.0.5</a>, which includes these changes:
         <ul>
             <li>Prevent editing of sent file uploads.</li>
-            <li></li><a href="https://github.com/conversejs/converse.js/issues/1089">#1089</a>: When filtering the roster for `online` users, show all non-offline users.</li>
-            <li></li><a href="https://github.com/conversejs/converse.js/issues/1733">#1733</a>: New message notifications for a minimized chat stack on top of each other.</li>
-            <li></li><a href="https://github.com/conversejs/converse.js/issues/1757">#1757</a>: Chats are hidden behind the controlbox on mobile.</li>
-            <li></li><a href="https://github.com/conversejs/converse.js/issues/1760">#1760</a>: Private messages no longer received after websocket reconnect.</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1089">#1089</a>: When filtering the roster for `online` users, show all non-offline users.</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1733">#1733</a>: New message notifications for a minimized chat stack on top of each other.</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1757">#1757</a>: Chats are hidden behind the controlbox on mobile.</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/1760">#1760</a>: Private messages no longer received after websocket reconnect.</li>
         </ul>
     </li>
 </ul>
